2012-08-20 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-13
	* catching all kinds of exception in postEntry(iChoke)
	* implement output (stream) rates

2012-07-20 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-12
	* bugfixes
	* use time form last update instead of fixed 23 sec interval

2012-07-13 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-11
	* dqmEnabled --> false by default
	* fixed rolling plots bug
	* check if collector port is a number
	* fixed filling wrong row in module time spent histograms
	* refill whole row when new item added in module time
	* lsStat and lsCommonStat list is now allocated on heap (avoids extra copy)
	* refilling past 4 lumisections on report with new lumi received
	* reporting modules taking a lot of time (warning) with log4cplus

2012-07-10 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-10
	* rate plots per machine
	* remove EventInfo for now (only Everything / Layouts will have DAQ)

2012-07-06 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-09
	* fix rolling stat histograms
	* no event time graph for first 2 lumis
	* correct event time errors
	* "dqmEnabled" xdaq parameter
	* fixing dangerous access to dqm during stopping (if dqm disabled)

2012-07-04 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-08
	* histogram bugfixes (after 1st production run)
	* updating last two lumisections on update
	* N reporting EP's per type histogram
	* deque used instead of queue
	* more careful checking if histograms removed at stop
	* displaying modules with >2% fraction (was 3%)

2012-07-03 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-07
	* configurable top level folder name
	  (allowind prod, daqval and development on same server)

2012-07-03 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-06
	* configurable permissive saving of dqm files
	  (0777 if parameter "dqmFilesWritableForAll" is true)

2012-07-02 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-05